# ghostpp

./: .gitignore  BNCSutil.lib  MANUAL  README.md  changelog.txt  default.cfg  gameloaded.txt  gameover.txt  ghost.cfg  ghost.sln  ipblacklist.txt  language.cfg  language_german.cfg  language_russian.cfg  language_spanish.cfg  language_turkish.cfg  license.txt  mysql_create_tables_v1.sql  mysql_create_tables_v2.sql  mysql_create_tables_v3.sql  mysql_upgrade_v1-v2.sql  readme.replay_stitcher.txt  readme.txt  update_dota_elo.cfg  update_w3mmd_elo.cfg
CascLib/: .gitignore  CMakeLists.txt
StormLib/: CMakeLists.txt  Makefile.config  StormLib-Info.plist  StormLib.vcproj  StormLibTest.vcproj  StormLib_vs15.vcxproj  makefile
StormLib/StormLib.xcodeproj/: project.pbxproj
StormLib/src/: FileStream.cpp  SBaseCommon.cpp
StormLib/stormlib/: Makefile  SCommon.cpp  SCommon.h  SFileCompactArchive.cpp  SFileExtractFile.cpp  SFileFindFile.cpp  StormLib.h  (+7 more)
bncsutil/: CMakeLists.txt  README.md
bncsutil/CMake/Modules/: FindGMP.cmake  FindMPIR.cmake
bncsutil/depends/include/: README.txt  gmp.h
bncsutil/depends/lib/: README.txt
bncsutil/src/bncsutil/: Makefile  bsha1.cpp  bsha1.h  cdkeydecoder.cpp  cdkeydecoder.h  checkrevision.cpp  checkrevision.h  decodekey.cpp  decodekey.h  file.cpp  file.h  libinfo.cpp  mutil.h  mutil_types.h  nls.c  nls.h  oldauth.cpp  pe.c  pe.h  sha1.h  stack.c  stack.h
bncsutil/vb6_example/: BNCSutil.bas  BNCSutilExample.vbp  BNCSutilExample.vbw  Connection.bas  Interface.bas  MSSCCPRJ.SCC  NLS.cls  Packet.cls  frmMain.frm  frmNewAccount.frm
bncsutil/vc8_build/: BNCSutil.vcproj  BNCSutil.vcxproj  bncsutil.def  gmp.lib
db/: uuid
ghost/: Makefile  StormLibRAS.lib  bncsutilinterface.cpp  bncsutilinterface.h  bnet.cpp  bnet.h  bnetprotocol.cpp  bnetprotocol.h  bnlsclient.cpp  bnlsclient.h  bnlsprotocol.cpp  bnlsprotocol.h  commandpacket.cpp  config.cpp  config.h  crc32.cpp  csvparser.cpp  csvparser.h  game.cpp  game.h  game_admin.cpp  game_admin.h  game_base.cpp  game_base.h  game_cascaded.cpp  game_cascaded.h  game_staging.cpp  game_staging.h  gameplayer.cpp  gameplayer.h  gameprotocol.cpp  gameprotocol.h  gameslot.cpp  gameslot.h  ghost.cpp  ghost.h  ghost.vcproj  ghost.vcxproj  ghost.vcxproj.filters  ghost_cmd.cpp  (+39 more)
ghost configurator/: MainWindow.Designer.vb  MainWindow.resx  MainWindow.vb  ReadMe.txt  SettingsDialog.Designer.vb  SettingsDialog.resx  SettingsDialog.vb  app.config  ghost configurator.sln  ghost configurator.vbproj  myTextBox.Designer.vb  myTextBox.vb
mapcfgs/: adrenaline.cfg  battleshipspro1189.cfg  battleshipspro1197.cfg  blizzard.j  common.j  dota6.56.cfg  dota6.56_obs.cfg  dota6.57.cfg  dota6.57_obs.cfg  dota6.58b.cfg  dota6.58b_obs.cfg  dota6.59.cfg  dota6.59_obs.cfg  dota6.59d.cfg  dota6.59d_obs.cfg  warlock081b.cfg  warlock082b.cfg  warlock083.cfg  warlock086.cfg  wormwar.cfg
replay_stitcher/: Makefile  ghost.h  replay_stitcher.cpp  replay_stitcher.vcproj
update_dota_elo/: Makefile  elo.cpp  update_dota_elo.cpp  update_dota_elo.vcproj  update_dota_elo.vcxproj  update_dota_elo.vcxproj.filters
update_w3mmd_elo/: Makefile  elo.h  update_w3mmd_elo.cpp  update_w3mmd_elo.vcproj  update_w3mmd_elo.vcxproj  update_w3mmd_elo.vcxproj.filters
(+29 files in other folders)
